# langchain_tutorial

./: pyproject.toml
langchain_tutorial/: extract_1.py  extract_output.py  teste.py
